added guitar belt

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
 
    <div class="container">
+      <div class="guitar-belt"></div>
+      <div class="guitar-belt right"></div>
+
       <div class="shirt"></div>
       <div class="head arm-move"></div>
 
@@ -24,6 +27,7 @@
       </div>
       <div class="arm right"></div>
       <div class="forearm right"></div>
+      <div class="guitar-belt right"></div>
       <div class="leg"></div>
       <div class="leg right"></div>
       <div class="shoe"></div>
