better forearm movement

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
     </div>
 
-    <div class="forearm rotating ">
+    <div class="forearm rotating-2 ">
       <div class=  "hand"></div>
       
     </div>
